--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "edd8e46e-3ca5-477d-bc67-b483295d3b14"
 authors = ["Matthew Schlegel <mkschleg@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+
 [compat]
 julia = "1"
 
