--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ChoosyDataLogger"
+name = "ChoosyDataLoggers"
 uuid = "edd8e46e-3ca5-477d-bc67-b483295d3b14"
 authors = ["Matthew Schlegel <mkschleg@gmail.com> and contributors"]
 version = "0.1.0"
@@ -11,6 +11,8 @@ Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 
 [compat]
 julia = "1"
+LoggingExtras = "0.4"
+MacroTools = "0.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
