--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,9 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 
 [compat]
-LoggingExtras = "0.4"
-MacroTools = "0.5"
 EllipsisNotation = "1"
+LoggingExtras = "0.4, 0.5"
+MacroTools = "0.5"
 julia = "1"
 
 [extras]
